UtahLiveDataTest/src/objects/ProjectCostByFundingSource__c.object
<CustomObject>
    <description>Project Cost By Funding Source : Details of Funding Sources</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Project Cost By Funding Sources</relationshipLabel>
        <relationshipName>AppProjectCostByFundingSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Budget Period</description>
        <inlineHelpText>Budget Period</inlineHelpText>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Project Cost By Funding Sources</relationshipLabel>
        <relationshipName>ProjectCostByFundingSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideApplicationEditDelete__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Application__r.Status__c, &apos;Created&apos;), ISPICKVAL(Application__r.Status__c, &apos;Internally Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideApplicationEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(
  AND(Program__c!=null,NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))),
  AND(Application__c!=null,NOT(OR(ISPICKVAL(Application__r.Status__c, &apos;Created&apos;), 
   ISPICKVAL(Application__r.Status__c, &apos;Internally Reviewed&apos;))))
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Narration__c</fullName>
        <description>Comments, Description for the entry</description>
        <label>Narration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Service Area</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ProgramServiceArea__c.Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramServiceArea__c</referenceTo>
        <relationshipLabel>Project Cost By Funding Sources</relationshipLabel>
        <relationshipName>PSAProjectCostByFundingSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Project Cost By Funding Sources</relationshipLabel>
        <relationshipName>ProjectCostByFundingSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecuredAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Secured Amount</description>
        <label>Secured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <description>Source Type</description>
        <inlineHelpText>Source Type</inlineHelpText>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Private/NGO</fullName>
                </value>
                <value>
                    <fullName>Program Income</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>IF(ISPICKVAL(SourceType__c, &quot;State&quot;) , 0 + UnsecuredAmount__c , SecuredAmount__c + UnsecuredAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnsecuredAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unsecured Amount</description>
        <inlineHelpText>Unsecured Amount</inlineHelpText>
        <label>Unsecured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Cost By Funding Source</label>
    <nameField>
        <label>Project Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Cost By Funding Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Program_Income_Validation</fullName>
        <active>true</active>
        <description>Program Income Validation for Program</description>
        <errorConditionFormula>AND(Program__c!=null,
 UnsecuredAmount__c&gt;0,
 Text(SourceType__c)==&apos;Program Income&apos; )</errorConditionFormula>
        <errorMessage>Requested/Unsecured Amount must be 0 when Financial Source is of type Program Income</errorMessage>
    </validationRules>
</CustomObject>